--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "help.com-react-coding-challange",
+  "name": "nuffsaid.com-react-coding-challange",
   "version": "0.0.1",
-  "description": "help.com react coding challange",
+  "description": "nuffsaid.com react coding challange",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom"
   },
-  "author": "Help.com",
-  "license": "No license",
+  "author": "nuffsaid.com",
+  "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^3.8.2",
-    "chance": "^0.8.0",
+    "faker": "^5.5.3",
     "lodash": "^4.17.2",
-    "prop-types": "^15.5.8",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {},
   "browserslist": {
@@ -37,5 +36,6 @@
       "**/src/**/*.js",
       "!**/__tests__/**"
     ]
-  }
+  },
+  "repository": "git@gitlab.com:arnab8/nuffsaid-frontend-coding-challenge.git"
 }
