--- a/package.json
+++ b/package.json
@@ -56,6 +56,14 @@
   "repository": "git@gitlab.com:arnab8/nuffsaid-frontend-coding-challenge.git",
   "devDependencies": {
     "@types/faker": "^5.5.8",
-    "@types/lodash": "^4.14.172"
+    "@types/lodash": "^4.14.172",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.25.3",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
