Render messages with error priority

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,16 @@
     "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/recommended"
+    ],
+    "rules": {
+    "@typescript-eslint/ban-types": [
+        "error",
+        {
+        "extendDefaults": true,
+        "types": {
+            "{}": false
+        }
+        }
     ]
+    }
 }
