--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "bootstrap": "^5.1.1",
+    "bootswatch": "^5.1.1",
     "faker": "^5.5.3",
     "lodash": "^4.17.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "rxjs": "^7.3.0",
