--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "rxjs": "^7.3.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
@@ -64,6 +65,7 @@
   "devDependencies": {
     "@types/faker": "^5.5.8",
     "@types/lodash": "^4.14.172",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
